// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a preview button with NO previewUrl 1`] = `
<button
  className="jEtlWH btn btn-primary btn-block"
  disabled={true}
  onClick={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  No Preview Available
  <span
    className="glyphicon glyphicon-play"
  />
</button>
`;

exports[`renders a preview button with previewUrl 1`] = `
<button
  className="jEtlWH btn btn-primary btn-block"
  disabled={false}
  onClick={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  Preview
  <span
    className="glyphicon glyphicon-play"
  />
</button>
`;
